@@ -1,11 +1,10 @@
 package se.hydroleaf.service;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.Spy;
 import se.hydroleaf.dto.snapshot.LiveNowSnapshot;
 import se.hydroleaf.dto.snapshot.SystemSnapshot;
 import se.hydroleaf.dto.summary.StatusAllAverageResponse;
@@ -16,10 +15,11 @@ import se.hydroleaf.repository.SensorDataRepository;
 import se.hydroleaf.repository.dto.LiveNowRow;
 
 import java.util.List;
-import java.util.Map;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyList;
 
 @ExtendWith(MockitoExtension.class)
 class StatusServiceTest {
@@ -30,16 +30,11 @@ class StatusServiceTest {
     @Mock
     private ActuatorStatusRepository actuatorStatusRepository;
 
-    @Spy
-    @InjectMocks
     private StatusService statusService;
 
-    private record Row(String system, String layer, String type, Double average, Long count) implements LiveNowRow {
-        public String getSystem() { return system; }
-        public String getLayer() { return layer; }
-        public String getType() { return type; }
-        public Double getAverage() { return average; }
-        public Long getCount() { return count; }
+    @BeforeEach
+    void setUp() {
+        statusService = new StatusService(sensorDataRepository, actuatorStatusRepository);
     }
 
     @Test
@@ -126,19 +121,20 @@ class StatusServiceTest {
 
     @Test
     void getLiveNowSnapshotAggregatesByDevice() {
-        List<LiveNowRow> sensorRows = List.of(
-                new Row("S01", "L01", "light", 2.0, 2L),
-                new Row("S01", "L01", "humidity", 3.0, 3L),
-                new Row("S01", "L01", "temperature", 4.0, 4L),
-                new Row("S01", "L01", "dissolvedTemp", 5.0, 5L),
-                new Row("S01", "L01", "dissolvedOxygen", 6.0, 6L),
-                new Row("S01", "L01", "pH", 7.0, 7L),
-                new Row("S01", "L01", "dissolvedEC", 8.0, 8L),
-                new Row("S01", "L01", "dissolvedTDS", 9.0, 9L),
-                new Row("S02", "L01", "dissolvedOxygen", 6.0, 6L)
+        java.time.Instant now = java.time.Instant.now();
+        List<LiveNowRow> sensorRows = Arrays.asList(
+                new LiveNowRow("S01", "L01", "light", "lux", 2.0, 2L, now),
+                new LiveNowRow("S01", "L01", "humidity", "%", 3.0, 3L, now),
+                new LiveNowRow("S01", "L01", "temperature", "°C", 4.0, 4L, now),
+                new LiveNowRow("S01", "L01", "dissolvedTemp", "°C", 5.0, 5L, now),
+                new LiveNowRow("S01", "L01", "dissolvedOxygen", "mg/L", 6.0, 6L, now),
+                new LiveNowRow("S01", "L01", "pH", "pH", 7.0, 7L, now),
+                new LiveNowRow("S01", "L01", "dissolvedEC", "mS/cm", 8.0, 8L, now),
+                new LiveNowRow("S01", "L01", "dissolvedTDS", "ppm", 9.0, 9L, now),
+                new LiveNowRow("S02", "L01", "dissolvedOxygen", "mg/L", 6.0, 6L, now)
         );
-        List<LiveNowRow> actuatorRows = List.of(
-                new Row("S01", "L01", "airPump", 1.0, 1L)
+        List<LiveNowRow> actuatorRows = Arrays.asList(
+                new LiveNowRow("S01", "L01", "airPump", "status", 1.0, 1L, now)
         );
 
         when(sensorDataRepository.fetchLatestSensorAverages(anyList())).thenReturn(sensorRows);
@@ -163,13 +159,16 @@ class StatusServiceTest {
 
     @Test
     void getLiveNowSnapshotAggregatesMultipleLayers() {
-        List<LiveNowRow> sensorRows = List.of(
-                new Row("S01", "L01", "dissolvedTemp", 10.0, 1L),
-                new Row("S01", "L02", "dissolvedTemp", 30.0, 1L)
+        java.time.Instant t1 = java.time.Instant.parse("2023-01-01T00:00:00Z");
+        java.time.Instant t2 = java.time.Instant.parse("2023-01-02T00:00:00Z");
+
+        List<LiveNowRow> sensorRows = Arrays.asList(
+                new LiveNowRow("S01", "L01", "dissolvedTemp", "°C", 10.0, 1L, t1),
+                new LiveNowRow("S01", "L02", "dissolvedTemp", "°C", 30.0, 1L, t2)
         );
-        List<LiveNowRow> actuatorRows = List.of(
-                new Row("S01", "L01", "airPump", 1.0, 1L),
-                new Row("S01", "L02", "airPump", 3.0, 1L)
+        List<LiveNowRow> actuatorRows = Arrays.asList(
+                new LiveNowRow("S01", "L01", "airPump", "status", 1.0, 1L, t1),
+                new LiveNowRow("S01", "L02", "airPump", "status", 3.0, 1L, t2)
         );
 
         when(sensorDataRepository.fetchLatestSensorAverages(anyList())).thenReturn(sensorRows);
@@ -193,15 +192,16 @@ class StatusServiceTest {
 
     @Test
     void getLiveNowSnapshotSkipsBlankSystemOrLayer() {
-        List<LiveNowRow> sensorRows = List.of(
-                new Row("", "L01", "light", 1.0, 1L),
-                new Row("S01", " ", "light", 1.0, 1L),
-                new Row(null, "L02", "light", 1.0, 1L),
-                new Row("S01", null, "light", 1.0, 1L),
-                new Row("S01", "L01", "light", 1.0, 1L)
+        java.time.Instant now = java.time.Instant.now();
+        List<LiveNowRow> sensorRows = Arrays.asList(
+                new LiveNowRow("", "L01", "light", "lux", 1.0, 1L, now),
+                new LiveNowRow("S01", " ", "light", "lux", 1.0, 1L, now),
+                new LiveNowRow(null, "L02", "light", "lux", 1.0, 1L, now),
+                new LiveNowRow("S01", null, "light", "lux", 1.0, 1L, now),
+                new LiveNowRow("S01", "L01", "light", "lux", 1.0, 1L, now)
         );
-        List<LiveNowRow> actuatorRows = List.of(
-                new Row("S01", "L01", "airPump", 1.0, 1L)
+        List<LiveNowRow> actuatorRows = Arrays.asList(
+                new LiveNowRow("S01", "L01", "airPump", "status", 1.0, 1L, now)
         );
 
         when(sensorDataRepository.fetchLatestSensorAverages(anyList())).thenReturn(sensorRows);
